# VerbaTerra-Master

./: .gitignore  .pre-commit-config.yaml  01_quickstart.ipynb  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  VerbaTerra_User_Manual.md  calr.md  changelog.md  data_policy.md  index.md  methods.md  metrics.md  metrics.py  mkdocs.yml  model.py  netlify.toml  overview.md  package.json  pnpm-lock.yaml  pyproject.toml  reproducibility.md  requirements-dev.txt  robustness_directionality.md  run_quickstart.py  sample.csv  tsconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  pages.yml
apps/analyst/: index.html  package.json
apps/analyst/public/: example.csv
apps/analyst/src/: charts.ts  csv.ts  main.ts  metrics.ts  styles.css
apps/analyst/tests/: metrics.test.ts
apps/hub/: index.html  package.json
apps/hub/src/: main.ts  styles.css
apps/nexus/: index.html  package.json
apps/nexus/src/: guide.md  main.ts  styles.css
apps/nora/: index.html  package.json
apps/nora/src/: main.ts  rules.ts  styles.css
apps/vsion/: index.html  package.json
apps/vsion/src/: main.ts  sim.ts  styles.css  ui.ts
apps/vsion/tests/: sim.test.ts
data/: sample_civilizations.csv  sample_languages.csv
data/dictionary/: fields.md
data/samples/: vsion_sample.csv
docs/: data.md  engines.md  experiments.md  index.md  labs.md  metrics.md  mkdocs.yml  models-user-guide.md  models.md  roadmap.md  user-manual.md
docs/api/: index.md
docs/docs/: embeds.md  engines.md  getting-started.md  index.md  metrics.md
docs/engines/: analyst.md  nexus.md  nphra.md  vsion.md
docs/labs/: civilization_lab_v19.md
docs/methodology/: calr.md  iclhf.md  r_type_framework.md
docs/methods/: iclhf.md  index.md
docs/papers/: index.md
examples/scripts/: compute_metrics.py  make_report.py  run_vsion.py
src/verbaterra/: __init__.py  cli.py  cli_model.py
src/verbaterra/core/: __init__.py  metrics.py
src/verbaterra/data/: __init__.py
src/verbaterra/data/samples/: __init__.py
src/verbaterra/dataio/: __init__.py  loaders.py  schema.py
src/verbaterra/engines/: __init__.py  types.py  vsion.py
src/verbaterra/engines/cch/: __init__.py  lab_demo.py  simulator.py
src/verbaterra/engines/cch/configs/: default.yaml
src/verbaterra/engines/nphra/: __init__.py  lab_demo.py  simulator.py
src/verbaterra/engines/nphra/configs/: default.yaml
src/verbaterra/engines/vsion/: __init__.py  lab_demo.py  simulator.py
src/verbaterra/engines/vsion/configs/: __init__.py  default.yaml
src/verbaterra/examples/: __init__.py  run_vsion.py
src/verbaterra/hypotheses/: __init__.py  integration_adaptation.py  ritual_syntax.py  symbolism_semantics.py  trade_lexicon.py
src/verbaterra/iclhf/: __init__.py  model.py
src/verbaterra/metrics/: __init__.py  crm.py  nlis.py  utils.py
src/verbaterra/models/: __init__.py  iclhf.py  iclhf_model.py
src/verbaterra/utils/: __init__.py  config.py  logging.py
tests/: test_metrics.py  test_model.py  test_simulation.py
tests/integration/: test_cli.py  test_vsion_end_to_end.py
tests/unit/: test_engines.py  test_iclhf_model.py  test_metrics.py  test_metrics_crm.py  test_metrics_nlis.py  test_models.py  test_schema_validation.py
