[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verbaterra"
version = "0.1.0"
description = "VerbaTerra Simulation Lab — cultural–linguistic simulation & analysis toolkit"
authors = [{name="Harshit Gupta"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "networkx>=3.2"
]

[project.optional-dependencies]
test = ["pytest>=7.4"]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
